Add some file for S3 storage